--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://weixin-you/travel-app.github.io",
+  "homepage": "https://weixin-you/travel-app.github.io/travel-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
